--- a/app/views/layouts/main.hbs
+++ b/app/views/layouts/main.hbs
@@ -9,6 +9,10 @@
   {{#if ENV_DEVELOPMENT}}
     <script src="http://localhost:35729/livereload.js"></script>
   {{/if}}
+  <script src="/js/map.js"></script>
+  <script async defer
+  src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC7B7SuMxuhVlpsFDh8FjOtehozOrnCtn4&callback=initMap">
+  </script>
 </head>
 <body>
 
