--- a/public/css/log.css
+++ b/public/css/log.css
@@ -5,7 +5,12 @@
   height: 100%;
   position: absolute;
   background: #764ba2;
-  background-image: linear-gradient(135deg, #667eea 0%, #764ba2 100%); }
+  background-image: linear-gradient(
+    135deg, 
+    rgba(102, 126, 234, 0.8) 0%, 
+    rgba(118, 75, 162, 0.8) 100%
+  ); 
+}
 
 #photo {
   top: 38px;
