--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,2 +1,73 @@
 * {
-  font: 400 13.3333px Arial; }
+    margin: 0 0;
+    font: 400 13.3333px Arial;
+}
+
+body {
+    background: rgb(236, 240, 250);
+}
+
+#space {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+}
+
+header {
+    top: 0px;
+    left: 0px;
+    width: 220px;
+    height: 100%;
+    overflow: hidden;
+    position: absolute;
+    background-image: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+}
+
+#user {
+    bottom: 0px;
+    width: 100%;
+    z-index: 300;
+    height: 229px;
+    box-shadow: 0px 0px 100px 0px #29325a;
+}
+
+#user #title {
+    color: white;
+    font-size: 20px;
+    font-weight: bold;
+    text-align: center;
+    padding-top: 26px;
+    padding-bottom: 10px;
+}
+
+#user #photo-space {
+    text-align: center;
+}
+
+#user img {
+    height: 90px;
+    border-radius: 30px 30px;
+    box-shadow: 5px 5px 20px 3px rgba(62, 35, 109, 1);
+}
+
+#user #name-space {
+    color: white;
+    font-size: 18px;
+    padding-top: 9px;
+    text-align: center;
+    padding-bottom: 4px;
+}
+
+#user #nom-space {
+    color: white;
+    font-size: 16px;
+    text-align: center;
+}
+
+#map {
+    top: 0px;
+    left: 220px;
+    height: 100%;
+    position: absolute;
+    width: calc(100% - 220px);
+}
