--- a/public/css/style.css
+++ b/public/css/style.css
@@ -64,6 +64,63 @@ header {
     text-align: center;
 }
 
+#list-content {
+    top: 0px;
+    left: 220px;
+    width: 260px;
+    height: 100%;
+    z-index: 300;
+    position: absolute;
+    background: rgb( 255, 255, 255);
+    box-shadow: 0px 0px 100px 6px rgba(80, 75, 148, 0.6);
+}
+
+#list-content a {
+    width: 100%;
+    height: 45px;
+    display: block;
+    line-height: 30px;
+    padding-top: 10px;
+    padding-bottom: 9px;
+}
+
+#list-content a div {
+    float: left;
+}
+
+#list-content a div:nth-child(1) {
+    width: 45px;
+    height: 45px;
+    padding-left: 10px;
+    padding-right: 10px;
+}
+
+#list-content a div:nth-child(1) img {
+    width: 45px;
+    height: 45px;
+    border-radius: 12px 12px;
+}
+
+#list-content a div:nth-child(2) {
+    height: 45px;
+    padding-bottom: 8px;
+    padding-right: 10px;
+    width: calc(100% - 75px);
+    color: rgb( 96, 96, 96);
+    border-bottom: solid 1px rgb( 166, 166, 166);
+}
+
+#list-content a div:nth-child(2) span:nth-child(1) {
+    width: 100%;
+    display: block;
+    font-size: 16px;
+    padding-top: 6px;
+    overflow: hidden;
+    font-weight: bold;
+    white-space: nowrap; 
+    text-overflow: ellipsis;
+}
+
 #map {
     top: 0px;
     left: 220px;
