--- a/public/css/style.css
+++ b/public/css/style.css
@@ -77,7 +77,7 @@ header {
 
 #list-content a {
     width: 100%;
-    height: 45px;
+    height: 40px;
     display: block;
     line-height: 30px;
     padding-top: 10px;
@@ -89,20 +89,20 @@ header {
 }
 
 #list-content a div:nth-child(1) {
-    width: 45px;
-    height: 45px;
+    width: 40px;
+    height: 40px;
     padding-left: 10px;
     padding-right: 10px;
 }
 
 #list-content a div:nth-child(1) img {
-    width: 45px;
-    height: 45px;
+    width: 40px;
+    height: 40px;
     border-radius: 12px 12px;
 }
 
 #list-content a div:nth-child(2) {
-    height: 45px;
+    height: 40px;
     padding-bottom: 8px;
     padding-right: 10px;
     width: calc(100% - 75px);
@@ -113,12 +113,17 @@ header {
 #list-content a div:nth-child(2) span:nth-child(1) {
     width: 100%;
     display: block;
-    font-size: 16px;
-    padding-top: 6px;
+    font-size: 14px;
+    padding-top: 3px;
     overflow: hidden;
     font-weight: bold;
     white-space: nowrap; 
     text-overflow: ellipsis;
+}
+
+#list-content a div:nth-child(2) span:nth-child(2) {
+    display: block;
+    padding-top: 1px;
 }
 
 #map {
