--- a/app/views/home.hbs
+++ b/app/views/home.hbs
@@ -87,6 +87,33 @@
             <span>123</span>
         </div>
     </a>
+    <a href="#">
+        <div id="img">
+            <img src="https://i0.wp.com/www.maquinas-de-afeitar.com/wp-content/uploads/barba.jpg?resizeu003d250%2C250" alt="">
+        </div>
+        <div class="text">
+            <span>Jorge Elizalde Salmerón</span>
+            <span>123</span>
+        </div>
+    </a>
+    <a href="#">
+        <div id="img">
+            <img src="https://i0.wp.com/www.maquinas-de-afeitar.com/wp-content/uploads/barba.jpg?resizeu003d250%2C250" alt="">
+        </div>
+        <div class="text">
+            <span>Jorge Elizalde Salmerón</span>
+            <span>123</span>
+        </div>
+    </a>
+    <a href="#">
+        <div id="img">
+            <img src="https://i0.wp.com/www.maquinas-de-afeitar.com/wp-content/uploads/barba.jpg?resizeu003d250%2C250" alt="">
+        </div>
+        <div class="text">
+            <span>Jorge Elizalde Salmerón</span>
+            <span>123</span>
+        </div>
+    </a>
 </div>
 
 <div id="map">
