--- a/public/css/log.css
+++ b/public/css/log.css
@@ -4,7 +4,7 @@
   width: 400px;
   height: 100%;
   position: absolute;
-  background: #764ba2;
+  background: rgba(118, 75, 162, 0);
   background-image: linear-gradient(
     135deg, 
     rgba(102, 126, 234, 0.8) 0%, 
