--- a/app/views/home.hbs
+++ b/app/views/home.hbs
@@ -5,11 +5,11 @@
             <img src="https://i0.wp.com/www.maquinas-de-afeitar.com/wp-content/uploads/barba.jpg?resizeu003d250%2C250" alt="">
         </div>
         <div id="name-space">
-            Aurelio
-            Rico Díaz
+            {{user.nombre}}
+            {{user.apellido}}
         </div>
         <div id="nom-space">
-            123
+            {{user.id}}
         </div>
     </div>
 </header>
