--- a/app/views/index.hbs
+++ b/app/views/index.hbs
@@ -130,6 +130,9 @@
         </div>
         <input name="id" placeholder="USUARIO" type="text" required style="margin-top: 222px;">
         <input name="password" placeholder="CONTRASEÑA" type="password" required>
+        <section id="log_notify">
+            Usuario o Contraseña Incorrectos
+        </section>  
         <button id="iniciar">INGRESAR</button>
     </div>
 </form>
