--- a/public/css/style.css
+++ b/public/css/style.css
@@ -4,6 +4,10 @@
     font: 400 13.3333px Arial;
 }
 
+.blur {
+    filter: blur(8px);
+}
+
 body {
     background: rgb(236, 240, 250);
 }
@@ -64,6 +68,90 @@ header {
     color: white;
     font-size: 16px;
     text-align: center;
+}
+
+#cs {
+    left: 0px;
+    bottom: 0px;
+    width: 100%;
+    height: 40px;
+    cursor: pointer;
+    border: solid 0px;
+    position: absolute;
+    transition: all linear 0.2s;
+    color: rgba( 242, 242, 242, 0.7);
+    border-top: solid 1px rgba( 242, 242, 242, 0.1);
+    background: linear-gradient(90deg, rgba(1,1,1,0.2) 0%, rgba(1,1,1,0) 50%, rgba(1,1,1,0.2) 100%);
+}
+
+#cs::after {
+    top: 0px;
+    left: 0px;
+    width: 100%;
+    content: "";
+    z-index: -1;
+    height: 100%;
+    position: absolute;
+    transition: all linear 0.2s;
+    background: rgba( 11, 11, 11, 0.1);
+}
+
+#cs:hover {
+    color: rgba( 242, 242, 242, 0.9);
+}
+
+#cs:hover::after {
+    background: rgba( 11, 11, 11, 0.3);
+}
+
+header #menu {
+    width: 85%;
+    min-height: 35px;
+    margin-top: 20px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+header #menu button {
+    width: 100%;
+    height: 35px;
+    outline: none;
+    display: block;
+    cursor: pointer;
+    border: solid 0px;
+    position: relative;
+    transition: all linear 0.2s;
+    background: rgba( 1, 1, 1, 0.2);
+    color: rgba( 242, 242, 242, 0.6);
+    border-bottom: solid 1px rgba( 242, 242, 242, 0.1);
+}
+
+header #menu button:first-child {
+    border-radius: 4px 4px 0px 0px;
+}
+
+header #menu button:last-child {
+    border-radius: 0px 0px 4px 4px;
+}
+
+header #menu button:hover,
+header #menu button.active {
+    color: rgba( 242, 242, 242, 0.8);
+    background: rgba(1, 1, 1, 0.3);
+    border-bottom: solid 1px rgba( 242, 242, 242, 0.3);
+}
+
+header #menu button.active::after {
+    top: 0px;
+    right: -17px;
+    width: 0px;
+    height: 0px;
+    content: "";
+    position: absolute;
+    border: solid 17px #f2f2f2;
+    border-top-color: transparent;
+    border-left-color: transparent;
+    border-bottom-color: transparent;
 }
 
 #list-content {
