--- a/app/views/partials/actions.hbs
+++ b/app/views/partials/actions.hbs
@@ -24,8 +24,12 @@
             </span>
         </div>
         <div class="actions--space">
+            <input type="text" name="id" placeholder="Edificio">
+            <input type="text" name="nombre" placeholder="Nombre">
+            <input type="text" name="aula" placeholder="Aula">  
+            <input type="submit" value="Enviar">
             {{! Todo el código de formularios, vista, etc... aquí }}
-            Hi
+            haci esta bien ? 
         </div>
     </section>
     {{! panel para administrar cuenta }}
