--- a/app/views/partials/actions.hbs
+++ b/app/views/partials/actions.hbs
@@ -23,11 +23,11 @@
                 <br>E<br>D<br>I<br>F<br>I<br>C<br>I<br>O<br>
             </span>
         </div>
-        <div class="actions--space">
+        <div class="actions--spaces">
             <input type="text" name="id" placeholder="Edificio">
             <input type="text" name="nombre" placeholder="Nombre">
             <input type="text" name="aula" placeholder="Aula">  
-            <input type="submit" value="Enviar">
+            <input type="submit" value="Registrar">
             {{! Todo el código de formularios, vista, etc... aquí }}
             haci esta bien ? 
         </div>
