--- a/public/css/actions.css
+++ b/public/css/actions.css
@@ -55,3 +55,44 @@
     background: transparent;
     width: calc(100% - 50px);
 }
+
+#actions .actions--spaces {
+    top: 10px;
+    left: 50px;
+    height: 100%;
+    overflow-y: auto; 
+    overflow-x: hidden;
+    position: absolute;
+    background: transparent;
+    width: calc(100% - 50px);
+    size: 12px;
+}
+.actions--spaces input{
+	width: 50%;
+	margin-bottom: 20px;
+
+}
+.actions--spaces input[type="text"]{
+	border:none;
+	border-bottom: 1px solid #fff;
+	background: transparent;
+	outline: none;
+	height: 40px;
+	color: #fff;
+	font-size:26px;
+}
+.actions--spaces input[type="submit"]{
+    box-align: center;
+	border:none;
+	outline: none;
+	height: 40px;
+	background: #fb2525;
+	color: #fff;
+	font-size: 18px;
+	border-radius: 20px;
+}
+.actions--spaces input[type="submit"]:hover{
+	cursor: pointer;
+	background: #ffc107;
+	color: 000;
+}
