--- a/app/views/partials/actions.hbs
+++ b/app/views/partials/actions.hbs
@@ -11,7 +11,48 @@
         </div>
         <div class="actions--space">
             {{! Todo el código de formularios, vista, etc... aquí }}
-            Hi
+            <form action="/registra">
+                <img id="prev" src="
+                    https://i0.wp.com/www.maquinas-de-afeitar.com/wp-content/uploads/barba.jpg?resizeu003d250%2C250
+                " alt="">
+                <input type="text" name="id" placeholder="Número de empleado">
+                <input type="text" name="nombre" placeholder="Ingresa el nombre">
+                <input type="text" name="apellido" placeholder="Ingresa el apellido">
+                <select name="carrera" id="">
+                    <option value="">Carrera</option>
+                    <option value="ISC">ISC</option>
+                    <option value="IM">IM</option>
+                    <option value="II">II</option>
+                    <option value="IC">IC</option>
+                    <option value="LA">LA</option>
+                    <option value="LB">LB</option>
+                    <option value="G">G</option>
+                </select>
+                <select name="tipo_usuario" id="">
+                    <option value="">Tipo de Usuario</option>
+                    <option value="1">Administrador</option>
+                    <option value="2">Empleado</option>
+                </select>
+
+                <div id="carts">
+                    <div class="cart">
+                        <div class="cart--header"></div>
+                    </div>
+                    <div class="cart">
+                        <div class="cart--header"></div>
+                    </div>
+                    <div class="cart">
+                        <div class="cart--header"></div>
+                    </div>
+                    <div class="cart">
+                        <div class="cart--header"></div>
+                    </div>
+                    <div class="cart">
+                        <div class="cart--header"></div>
+                    </div>
+                </div>
+
+            </form>
         </div>
     </section>
     {{! panel para registrar edificio }}
