--- a/app/views/partials/actions.hbs
+++ b/app/views/partials/actions.hbs
@@ -64,7 +64,7 @@
                 <br>E<br>D<br>I<br>F<br>I<br>C<br>I<br>O<br>
             </span>
         </div>
-        <div class="actions--spaces">
+        <div class="actions--space">
             <input type="text" name="id" placeholder="Edificio">
             <input type="text" name="nombre" placeholder="Nombre">
             <input type="text" name="aula" placeholder="Aula">  
