--- a/public/css/actions.css
+++ b/public/css/actions.css
@@ -95,19 +95,62 @@
 
 #actions #carts .cart {
     width: 220px;
-    height: 250px;
+    height: auto;
     margin-top: 20px;
-    display: inline-block;
+    overflow: hidden;
     background: white;
     margin-left: 20px;
     margin-right: 20px;
+    display: inline-block;
     border-radius: 2px 2px;
-    overflow: hidden;
     box-shadow: 5px 5px 20px 3px rgba(62, 35, 109, 0.3);
 }
 
 #actions #carts .cart .cart--header {
     width: 100%;
-    height: 30px;
+    height: 55px;
     background-image: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+}
+
+#actions #carts .cart .cart--header .cart--name_day {
+    width: 100%;
+    height: 30px;
+    color: white;
+    font-size: 18px;
+    line-height: 30px;
+}
+
+#actions #carts .cart .cart--header .cart--column {
+    width: 50%;
+    float: left;
+    height: 25px;
+    color: #667eea;
+    line-height: 25px;
+    display: inline-block;
+    background: rgba( 242, 242, 242, 0.8);
+}
+
+#actions #carts .cart .cart--header .cart--column:nth-child(2) {
+    background: rgba( 232, 232, 232, 0.8);
+}
+
+#actions #carts .cart .cart--content {
+    width: 100%;
+    height: 30px;
+}
+
+#actions #carts .cart .cart--content:nth-child(2n) {
+    background: #f2f2f2;
+}
+
+#actions #carts .cart .cart--content .item {
+    width: 50%;
+    float: left;
+    height: 30px;
+    line-height: 30px;
+    background: transparent;
+}
+
+#actions #carts .cart .cart--content .item:nth-child(2n) {
+    background: rgba( 161, 161, 161, 0.1);
 }
