--- a/app/views/partials/actions.hbs
+++ b/app/views/partials/actions.hbs
@@ -44,7 +44,7 @@
                             </div>
                             <div class="cart--content">
                                 <div class="item">7 - 8</div>
-                                <div class="item"></div>
+                                <div class="item"><select name="" id=""><option value="">Edificio</option></select></div>
                             </div>
                             <div class="cart--content">
                                 <div class="item">8 - 9</div>
