--- a/public/css/actions.css
+++ b/public/css/actions.css
@@ -154,3 +154,11 @@
 #actions #carts .cart .cart--content .item:nth-child(2n) {
     background: rgba( 161, 161, 161, 0.1);
 }
+
+#actions #carts .cart .cart--content .item select {
+    margin: 0 0;
+    width: 100%;
+    height: 30px;
+    background: transparent;
+    box-shadow: 0px 0px 0px transparent;
+}
