--- a/app/views/partials/actions.hbs
+++ b/app/views/partials/actions.hbs
@@ -44,31 +44,59 @@
                             </div>
                             <div class="cart--content">
                                 <div class="item">7 - 8</div>
-                                <div class="item"><select name="" id=""><option value="">Edificio</option></select></div>
+                                <div class="item">
+                                    <select name="" id="">
+                                        <option value="">Edificio</option>
+                                    </select>
+                                </div>
                             </div>
                             <div class="cart--content">
                                 <div class="item">8 - 9</div>
-                                <div class="item"></div>
+                                <div class="item">
+                                    <select name="" id="">
+                                        <option value="">Edificio</option>
+                                    </select>
+                                </div>
                             </div>
                             <div class="cart--content">
                                 <div class="item">9 - 10</div>
-                                <div class="item"></div>
+                                <div class="item">
+                                    <select name="" id="">
+                                        <option value="">Edificio</option>
+                                    </select>
+                                </div>
                             </div>
                             <div class="cart--content">
                                 <div class="item">10 - 11</div>
-                                <div class="item"></div>
+                                <div class="item">
+                                    <select name="" id="">
+                                        <option value="">Edificio</option>
+                                    </select>
+                                </div>
                             </div>
                             <div class="cart--content">
                                 <div class="item">11 - 12</div>
-                                <div class="item"></div>
+                                <div class="item">
+                                    <select name="" id="">
+                                        <option value="">Edificio</option>
+                                    </select>
+                                </div>
                             </div>
                             <div class="cart--content">
                                 <div class="item">12 - 13</div>
-                                <div class="item"></div>
+                                <div class="item">
+                                    <select name="" id="">
+                                        <option value="">Edificio</option>
+                                    </select>
+                                </div>
                             </div>
                             <div class="cart--content">
                                 <div class="item">13 - 14</div>
-                                <div class="item"></div>
+                                <div class="item">
+                                    <select name="" id="">
+                                        <option value="">Edificio</option>
+                                    </select>
+                                </div>
                             </div>
                         </div>
                     {{/each}}
