--- a/public/css/actions.css
+++ b/public/css/actions.css
@@ -159,6 +159,7 @@
     margin: 0 0;
     width: 100%;
     height: 30px;
+    outline: none;
     background: transparent;
     box-shadow: 0px 0px 0px transparent;
 }
