--- a/app/views/partials/actions.hbs
+++ b/app/views/partials/actions.hbs
@@ -3,7 +3,7 @@
     {{! panel para registrar usuario }}
     <section id="regUP">
         <div class="header">
-            <button class="closeP">x</button>
+            <button class="closeP"></button>
             <span class="title">
                 R<br>E<br>G<br>I<br>S<br>T<br>R<br>A<br>R<br>
                 <br>U<br>S<br>U<br>A<br>R<br>I<br>O<br>
@@ -108,7 +108,7 @@
     {{! panel para registrar edificio }}
     <section id="regEP">
         <div class="header">
-            <button class="closeP">x</button>
+            <button class="closeP"></button>
             <span class="title">
                 R<br>E<br>G<br>I<br>S<br>T<br>R<br>A<br>R<br>
                 <br>E<br>D<br>I<br>F<br>I<br>C<br>I<br>O<br>
@@ -126,7 +126,7 @@
     {{! panel para administrar cuenta }}
     <section id="admCP">
         <div class="header">
-            <button class="closeP">x</button>
+            <button class="closeP"></button>
             <span class="title">
                 A<br>D<br>M<br>I<br>N<br>I<br>S<br>T<br>R<br>A<br>R<br>
                 <br>C<br>U<br>E<br>N<br>T<br>A<br>
