--- a/app/views/home.hbs
+++ b/app/views/home.hbs
@@ -7,8 +7,13 @@
             <img src="https://i0.wp.com/www.maquinas-de-afeitar.com/wp-content/uploads/barba.jpg?resizeu003d250%2C250" alt="">
         </div>
         <div id="name-space">
-            {{user.nombre}}
-            {{user.apellido}}
+            <script>
+                var name = "{{user.nombre}}";
+                var lname = "{{user.apellido}}";
+                var namepart = name.split(" ");
+                var lnamepart = lname.split(" ");
+                document.write(namepart[0] + " " + lnamepart[0]);
+            </script>
         </div>
         <div id="nom-space">
             {{user.id}}
