--- a/app/views/partials/actions.hbs
+++ b/app/views/partials/actions.hbs
@@ -44,7 +44,7 @@
                             </div>
                             {{#each ../matutino}}
                                 <div class="cart--content">
-                                    <div class="item">{{horaI}} - 8</div>
+                                    <div class="item">{{horaI}} - {{horaF}}</div>
                                     <div class="item">
                                         <select name="" id="">
                                             <option value="">Edificio</option>
