--- a/public/css/style.css
+++ b/public/css/style.css
@@ -8,7 +8,13 @@
     filter: blur(8px);
 }
 
-body {
+body, html {
+    top: 0px;
+    left: 0px;
+    width: 100vw;
+    height: 100%;
+    overflow: hidden;
+    position: absolute;
     background: rgb(236, 240, 250);
 }
 
