--- a/app/views/home.hbs
+++ b/app/views/home.hbs
@@ -2,9 +2,11 @@
 {{> actions}}
 <header>
     <div id="user">
-        <div id="title">LocationChecker</div>
+        <div id="title">
+            <img src="/icon/LocationCheckerTitlte.png" width="100%" alt="">
+        </div>
         <div id="photo-space">
-            <img src="https://i0.wp.com/www.maquinas-de-afeitar.com/wp-content/uploads/barba.jpg?resizeu003d250%2C250" alt="">
+            <img id="photo_user" src="https://i0.wp.com/www.maquinas-de-afeitar.com/wp-content/uploads/barba.jpg?resizeu003d250%2C250" alt="">
         </div>
         <div id="name-space">
             <script>
