--- a/app/views/index.hbs
+++ b/app/views/index.hbs
@@ -126,7 +126,7 @@
 <form method="POST" action="/inicia" id="logpanel">
     <div id="layout">
         <div id="photo">
-            <span>LC</span>
+            <img src="/icon/LocationChecker.png" width="100%" alt="">
         </div>
         <input name="id" placeholder="USUARIO" type="text" required style="margin-top: 222px;">
         <input name="password" placeholder="CONTRASEÑA" type="password" required>
