--- a/public/css/log.css
+++ b/public/css/log.css
@@ -41,31 +41,7 @@
   width: 150px;
   height: 150px;
   position: absolute;
-  border-radius: 50% 50%;
-  transform: translateX(-50%);
-  background: rgba(244, 244, 244, 0.4); }
-
-#photo:after {
-  top: 50%;
-  left: 50%;
-  width: 60%;
-  content: "";
-  height: 120%;
-  position: absolute;
-  border-radius: 50%;
-  transform: translate(-50%, -50%) rotate(45deg);
-  background: rgba(244, 244, 244, 0.4); }
-
-#photo:before {
-  top: 50%;
-  left: 50%;
-  width: 60%;
-  content: "";
-  height: 120%;
-  position: absolute;
-  border-radius: 50%;
-  transform: translate(-50%, -50%) rotate(-45deg);
-  background: rgba(244, 244, 244, 0.4); }
+  transform: translateX(-50%);}
 
 #photo span {
   top: 0px;
