--- a/public/css/style.css
+++ b/public/css/style.css
@@ -44,11 +44,13 @@ header {
 }
 
 #user #title {
+    width: 180px;
     color: white;
     font-size: 20px;
     font-weight: bold;
-    text-align: center;
+    margin: auto auto;
     padding-top: 26px;
+    text-align: center;
     padding-bottom: 10px;
 }
 
@@ -56,7 +58,7 @@ header {
     text-align: center;
 }
 
-#user img {
+#user #photo_user {
     height: 90px;
     border-radius: 30px 30px;
     box-shadow: 5px 5px 20px 3px rgba(62, 35, 109, 1);
