--- a/app/views/partials/actions.hbs
+++ b/app/views/partials/actions.hbs
@@ -46,7 +46,7 @@
                                 <div class="cart--content">
                                     <div class="item">{{horaI}} - {{horaF}}</div>
                                     <div class="item">
-                                        <select name="" id="">
+                                        <select name="{{../nombre}}_{{horaI}}-{{horaF}}" id="">
                                             <option value="">Edificio</option>
                                         </select>
                                     </div>
