--- a/public/css/actions.css
+++ b/public/css/actions.css
@@ -191,6 +191,11 @@
     width: 100%;
     height: 30px;
     outline: none;
+    border-radius: 0px 0px;
     background: transparent;
     box-shadow: 0px 0px 0px transparent;
+}
+
+#actions #carts .cart .cart--content .item select:focus {
+    background: rgba(102, 126, 234, 0.3);
 }
