--- a/app/views/home.hbs
+++ b/app/views/home.hbs
@@ -35,6 +35,11 @@
 
 <div id="space">
 
+    <div id="finderEmpleados">
+        <input type="text" name="find" placeholder="Buscar Empleado">
+        <button>f</button>
+    </div>
+
     <div id="list-content">
         <a href="#">
             <div id="img">
@@ -69,6 +74,15 @@
             </div>
             <div class="text">
                 <span>Kevin Noe Salinas De LA</span>
+                <span>123</span>
+            </div>
+        </a>
+        <a href="#">
+            <div id="img">
+                <img src="https://i0.wp.com/www.maquinas-de-afeitar.com/wp-content/uploads/barba.jpg?resizeu003d250%2C250" alt="">
+            </div>
+            <div class="text">
+                <span>Jorge Elizalde Salmerón</span>
                 <span>123</span>
             </div>
         </a>
