--- a/public/css/style.css
+++ b/public/css/style.css
@@ -32,6 +32,7 @@ header {
     z-index: 300;
     overflow: hidden;
     position: absolute;
+    box-shadow: 0px 0px 100px 6px rgba(80, 75, 148, 0.6);
     background-image: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
 }
 
@@ -165,16 +166,72 @@ header #menu button.active::after {
     border-bottom-color: transparent;
 }
 
-#list-content {
-    top: 0px;
-    left: 220px;
+#finderEmpleados {
+    top: 20px;
+    left: 240px;
     width: 260px;
-    height: 100%;
-    z-index: 100;
-    overflow: hidden;
+    z-index: 400;
+    height: 40px;
+    overflow: auto;
+    box-sizing: border-box;
     position: absolute;
+    border-radius: 2px 2px;
     background: transparent;
+    border: solid 1px rgb(171, 168, 190);
+}
+
+#finderEmpleados::before {
+    width: 100%;
+    z-index: -1;
+    content: "";
+    height: 40px;
+    position: fixed;
+    backdrop-filter: blur(10px);
+    background: rgba( 255, 255, 255, 0.8);
+}
+
+#finderEmpleados input[type="text"] {
+    float: left;
+    width: 219px;
+    height: 38px;
+    outline: none;
+    border: solid 0px;
+    padding-left: 10px;
+    padding-right: 10px;
+    box-sizing: border-box;
+    background: transparent;
+}
+
+#finderEmpleados button {
+    float: left;
+    width: 38px;
+    height: 38px;
+    outline: none;
+    border: solid 0px;
+    box-sizing: border-box;
+    background: rgba(102, 51, 153, 0.1);
+}
+
+#list-content {
+    top: 80px;
+    left: 240px;
+    width: 260px;
+    z-index: 300;
+    overflow: auto;
+    position: absolute;
+    border-radius: 2px 2px;
+    background: transparent;
+    height: calc(100% - 100px);
     box-shadow: 0px 0px 100px 6px rgba(80, 75, 148, 0.6);
+}
+
+#list-content::-webkit-scrollbar {
+	width: 6px;
+	background: rgba( 255, 255, 255, 0.2);
+}
+#list-content::-webkit-scrollbar-thumb {
+	width: 2px !important;
+    background: rgba( 11, 11, 11, 0.6);
 }
 
 #list-content::before {
@@ -182,7 +239,7 @@ header #menu button.active::after {
     z-index: -1;
     content: "";
     height: 100%;
-    position: absolute;
+    position: fixed;
     backdrop-filter: blur(10px);
     background: rgba( 255, 255, 255, 0.8);
 }
