--- a/app/views/home.hbs
+++ b/app/views/home.hbs
@@ -37,7 +37,7 @@
 
     <div id="finderEmpleados">
         <input type="text" name="find" placeholder="Buscar Empleado">
-        <button>f</button>
+        <button></button>
     </div>
 
     <div id="list-content">
