buscador en login

--- a/app/views/index.hbs
+++ b/app/views/index.hbs
@@ -17,6 +17,12 @@
         </div>
     </header>
 
+
+    <div id="finderEmpleados">
+        <input type="text" name="find" placeholder="Buscar Empleado">
+        <button></button>
+    </div>
+
     <div id="list-content">
         <a href="#">
             <div id="img">
