--- a/app/views/partials/actions.hbs
+++ b/app/views/partials/actions.hbs
@@ -91,7 +91,7 @@
         </div>
         <div class="actions--space">
             {{! Todo el código de formularios, vista, etc... aquí }}
-            Hi
+            Dios te ama
         </div>
     </section>
 </section>
